<resources>
    <string name="app_name">Vivint Order Entry</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="title_activity_contact_entry">ContactEntry</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PhoneNumber">Phone</string>
    <string name="BestCallDate">Best Call Date</string>
    <string name="BestCallTime">Best Call Time</string>
</resources>
